web/less/frontend/_responsive-767px-max.less
@import "_variables.less";
@import "_mixins.less";

// Fixed wrapper under 1024px
@media (max-width: 767px) {
  // homepage
  #slot1 .slot1-inner
  {
    padding: 40px 0 25px 0;
  }

  #slot1 .slot1-inner
  {

  }

  // Padding to set content in a bit
    body {
      padding-left: 0;
      padding-right: 0;
    }

  // Remove padding on container given explicit padding set on body
    .container-fluid {
      padding: 0;
    }

  // TYPOGRAPHY
  // ----------
  // Reset horizontal dl
    .dl-horizontal {
      dt {
        float: none;
        clear: none;
        width: auto;
        text-align: left;
      }
      dd {
        margin-left: 0;
      }
    }

  // GRID & CONTAINERS
  // -----------------
  // Remove width from containers
    .container {
      width: auto;
    }
  // Fluid rows
    .row-fluid {
      width: 100%;
    }


  // FORM FIELDS
  // -----------
  // Make span* classes full width
    .input-large,
    .input-xlarge,
    .input-xxlarge,
    input[class*="span"],
    select[class*="span"],
    textarea[class*="span"],
    .uneditable-input {
      .input-block-level();
    }
  // But don't let it screw up prepend/append inputs
    .input-prepend input,
    .input-append input,
    .input-prepend input[class*="span"],
    .input-append input[class*="span"] {
      display: inline-block; // redeclare so they don't wrap to new lines
      width: auto;
    }
    .controls-row [class*="span"] + [class*="span"] {
      margin-left: 0;
    }

  // Modals
    .modal {
      position: fixed;
      top:   20px;
      left:  20px;
      right: 20px;
      width: auto;
      margin: 0;
      &.fade.in { top: auto; }
    }


  .reset-row-fluid() {
    .row-fluid [class*="span"] {
      float: none;
      display: block;
      width: 100%;
      margin-left: 0;
      .box-sizing(border-box);
    }
  }

  //CONTAINERS & SIDEBAR
  header, nav, footer, #footer-links,
  .slots-container, .shadow,
  #slot1, #slot2  {
    width: 646px;
    .margin-auto();
  }

  .shadow {
    .box-shadow(none);
  }

  .container-fluid.fixed-right-300 {
    width: 96%;
    margin-left: 2%;
    margin-right: 2%;
  }

  #breadcrumbs {
    width: 96%;
    margin-left: 2%;
    margin-right: 2%;
  }

  .fixed-right-300 > #sidebar {
    width: 96%;
    .margin-auto();
    padding: 0 2%;
  }

  #content, .navbar, #breadcrumbs {
    border: none;
  }

  #breadcrumbs {
    margin-bottom: 8px;
  }

  #content {
    padding-top: 0;
  }




  //HEADER & NAV

  .cq-logo {
    top: 8px;

    &.logo {
      .size(96px, 176px);
      background-position: 0 10px;
      background-size: 229% auto;
    }
  }



  header {

    .search-header {
    margin-top: 18px;
    }

    .header-inner {
      padding-left: 5px;
      padding-right: 5px;
      .reset-row-fluid();
    }
  }

  //search input
  .search-header .input-append input {
    width: 280px;
  }

  header .navbar-inner {
    padding: 0;

    .container {
      padding: 0;
    }

  }

  header .navbar .nav > li > a {
    padding: 12px 25px 10px 25px;
  }

  .menu-wrapper-social-icons {
    display: none; //NB!!
  }

  //FOOTER
  .footer-inner .row-fluid > [class*="span"] {
    float: none;
    display: block;
    width: 100%;
    margin-left: 0;
    .box-sizing(border-box);
  }

  .footer-links-inner .row-fluid [class*="span"] {
    text-align: center;
  }

  #footer-links ul[role="footer-links"] {
    text-align: center;
    float: none;

    li {
      float: none;
      display: inline;

      a {
        display: inline;
        font-size: 12px;
        float: none;
      }
    }
  }

  .footer-profile-box-h-list ul.row-fluid .span6 {
    float: left;
    width: 48%;
  }

  .footer-social-icons {
    margin-bottom: 10px;
  }

  .footer-links {
    border: none;
    margin-right: 0;
  }

  .footer-user-container {
    padding-right: 10px;
    padding-left: 40px;
    margin: 40px 0;
  }

  .footer-profile-box {
    margin-right: 10px;
  }

  .footer-links-inner {
    .reset-row-fluid();
  }

  #footer-links, #footer {
    border: none;
  }

  footer .contact-us-button {
    float: left;
    width: 50%;
    margin: 20px 0;
  }
  .footer-social-icons {
    width: 250px;
    float: left;
    margin: 24px 0 0 0;
  }

  //ELEMENTS

  //Comments
  .collector-info-sidebar {
    > span3 {
      float: left;
    }
  }

  .post-comment textarea {
    width: 70%; //NB!!
  }

  //Vertical carousel
  .vertical-carousel-wrapper {
    .ui-carousel-navigation.up-arrow, .ui-carousel-navigation.down-arrow {
      display: block;
    }
  }



  //PAGES
  #sidebar #price-container {
    display: none;
  }

  .main-collectible-container .prev-zone .prev-btn {
    display: block;
  }

  .main-collectible-container .next-zone .next-btn {
    display: block;
  }
}


@media (max-width: 630px) {

  header, nav, footer, #footer-links,
   .slots-container, .shadow,
   #slot1, #slot2  {
     width: 640px;
     .margin-auto();
   }

  .container-fluid.fixed-right-300, #breadcrumbs {
    width: 620px;
    margin-left: 10px;
    margin-left: 10px;
  }

  .fixed-right-300 > #sidebar {
    width: 620px;
    .margin-auto();
    padding: 0 10px;
  }

}

